--- a/pages/ui-icons.html
+++ b/pages/ui-icons.html
@@ -21,7 +21,7 @@
 <script>
   requestAnimationFrame(()=>{
     const icons = [
-      'home','article','search','send','notifications','settings','cancel','check'
+      'home','article','search','send','notifications','settings','cancel','check','close'
     ];
 
     const container = document.querySelector('.content .preview');
