--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -50,7 +50,7 @@
   <span>Height 32.</span>
   <div class="example">
     <div class="preview">
-      <ui-input height="32"></ui-input>
+      <ui-input height="32" clearable></ui-input>
     </div>
     <code>
       &lt;ui-input height="32"&gt;&lt;/ui-input&gt;
