--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Web Components</title>
 </head>
 <body>
-
+<ui-focus></ui-focus>
 <div id="app">
 
   <nav>
@@ -71,6 +71,12 @@
         </div>
 
         <div class="menuItem">
+          <span onclick="navigate('ui-label')" data-page="ui-label">
+            Label
+          </span>
+        </div>
+
+        <div class="menuItem">
           <span onclick="navigate('ui-switch')" data-page="ui-switch">
             Switch
           </span>
@@ -80,6 +86,12 @@
 <!-- portal, observer, resize-handler, mount-detector -->
       <div class="menuCategory">
         <div class="menuTitle">Utilities</div>
+
+        <div class="menuItem">
+          <span onclick="navigate('ui-focus')" data-page="ui-focus">
+            Focus
+          </span>
+        </div>
 
       </div>
 <!---->
